<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/tvInputColor"
        android:padding="20dp"
        android:textSize="48sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_7"
            android:backgroundTint="#588157"
            android:onClick="onDigit"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_8"
            android:onClick="onDigit"
            android:backgroundTint="#588157"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/_9" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/divide"
            android:backgroundTint="@color/buttonColor"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_4"
            android:backgroundTint="@color/buttonColor"
            android:onClick="onDigit"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_5"
            android:backgroundTint="@color/buttonColor"
            android:onClick="onDigit"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_6"
            android:backgroundTint="@color/buttonColor"
            android:onClick="onDigit"
            android:layout_weight="1" />
        <Button
            android:id="@+id/buttonMultiple"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/multiple"
            android:backgroundTint="@color/buttonColor"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_1"
            android:backgroundTint="@color/buttonColor"
            android:onClick="onDigit"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_2"
            android:onClick="onDigit"
            android:backgroundTint="@color/buttonColor"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_3"
            android:onClick="onDigit"
            android:backgroundTint="@color/buttonColor"
            android:layout_weight="1" />
        <Button
            android:id="@+id/buttonMin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/minus"
            android:backgroundTint="@color/buttonColor"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/dot"
            android:backgroundTint="@color/buttonColor"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/_0"
            android:backgroundTint="@color/buttonColor"
            android:onClick="onDigit"
            android:layout_weight="1" />
        <Button
            android:id="@+id/buttonClr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/clr"
            android:backgroundTint="@color/buttonColor"
            android:layout_weight="1" />
        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/add"
            android:backgroundTint="@color/buttonColor"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="@string/equal"
            android:backgroundTint="@color/buttonColor"/>
    </LinearLayout>

</LinearLayout>